client-370-fix-leasing-overflow: leasion height fix

--- a/src/modules/wallet/modules/leasing/less/leasing.less
+++ b/src/modules/wallet/modules/leasing/less/leasing.less
@@ -29,7 +29,7 @@
   }
 
   w-transaction-list {
-    height: calc(~'100% - ' @height-transaction-header);
+    min-height: calc(~'100vh -'  130px);
 
     .w-transaction-list ul {
       border-top-left-radius: 0;
